Ticket #1006 (closed defect: fixed)

Opened 1 year ago

Last modified 1 year ago

Crash while seeking a Matroska file

Reported by: mikej83 Assigned to:
Priority: high Milestone:
Component: Decoders Version:
Severity: critical Keywords: mkv seek
Cc: Platform(s): Win32
Difficulty: unknown Work status: Not started

Description

Attempting to seek a Matroska Video file forward or backwards crashes a fresh install (0.8.6a on a computer that has never had VLC installed before). I have tried it with several known working, known complete files ~ 1GB each.

Hardware used:

Dell Inspiron 9300
 - Centrino 1.86 GHZ
 - 1GB RAM
 - nVidia GeForce Go 6800
 - Windows XP Home SP2

Error message is:

AppName: vlc.exe	 AppVer: 0.8.6.0	 ModName: libmkv_plugin.dll
ModVer: 0.0.0.0	 Offset: 00009837

I have attached the detailed error message.

This is possibly related to Ticket #895, though that ticket only referenced incomplete MKV files.

Attachments

6f4d_appcompat.txt (99.2 kB) - added by mikej83 on 01/17/07 04:05:33.
App Compat

Change History

01/17/07 04:05:33 changed by mikej83

  • attachment 6f4d_appcompat.txt added.

App Compat

(in reply to: ↑ description ; follow-up: ↓ 2 ) 02/25/07 16:55:36 changed by CosmikRoger

Replying to mikej83:

Attempting to seek a Matroska Video file forward or backwards crashes a fresh install (0.8.6a on a computer that has never had VLC installed before). I have tried it with several known working, known complete files ~ 1GB each. Hardware used: {{{ Dell Inspiron 9300 - Centrino 1.86 GHZ - 1GB RAM - nVidia GeForce? Go 6800 - Windows XP Home SP2 }}} ---- Error message is: {{{ AppName?: vlc.exe AppVer?: 0.8.6.0 ModName?: libmkv_plugin.dll ModVer?: 0.0.0.0 Offset: 00009837 }}} I have attached the detailed error message. This is possibly related to Ticket #895, though that ticket only referenced incomplete MKV files.

It might a ffdshow problem wich cannot handle MKV/x264 the way it should. Tested on two different computer with a movie I encoded, I had the same problem:

Hardware:

2 completly different computer One with Athlon 64 / ATI X800 Pro / 1GB RAM The other with Core 2 Duo / Nvidia Geforce Card / 2 GB RAM

Software:

Windows XP SP2 VLC 0.8.6a Different version of ffdshow on Windows Media Player and Media Player Classic

Movie:

x264 rev 620 (bitrate 3000 - subme 7) subtitle .idx (vobsub extraction) sound not reencoded (2 AAC / 1 DTS) MKV with MKVmerge

The solution I found is to disable overlay:

"C:\Program Files\Multimedia\VLC\vlc.exe" --vout directx --no-overlay --directx-hw-yuv --save-config vlc:quit

Hope it helps a bit

(in reply to: ↑ 1 ) 02/25/07 20:33:44 changed by mikej83

VLC still crashes even with overlays turned off. Media Player is able to seek on the same file, so I'm not sure that this is an ffdshow problem.

The files I'm working with are about 1.2 GB each. Of the 13 that I have I can seek on two of them without crashing VLC, so perhaps this is just an encoding issue. I don't know why though I could seek all of them in Media Player but not VLC.

05/10/07 00:49:10 changed by xtophe

  • status changed from new to closed.
  • resolution set to fixed.

(In [20041]) Fix crash in MKV demuxer. Patch courtesy of Harry Sintonen. Fix #1006