Fix crash in MKV demuxer. Patch courtesy of Harry Sintonen. Fix #1006